# deribit-trading-system

./: .gitignore  CMakeLists.txt  LICENSE  README.md
api/: DeribitWsClient.cpp  DeribitWsClient.hpp  IDeribitApi.hpp
cli/: Command.hpp  TradingCLI.cpp  TradingCLI.hpp
core/: AccountSummary.hpp  Instrument.hpp  Order.hpp  Position.hpp
docs/: README.md  architecture.md
engine/: TradingEngine.cpp  TradingEngine.hpp  TradingStrategy.hpp
infra/: Logger.hpp
src/: main.cpp
